Bug 1690163 - Account for pseudo TableColGroupFrame not being marked as anon wrapper boxes.  r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D103819